Update and rename 2017-10-24-test-markdown.md to 2017-10-24-hiring.md

--- a/_posts/2017-10-24-hiring.md
+++ b/_posts/2017-10-24-hiring.md
@@ -6,4 +6,4 @@ subtitle: Technicians, graduate students and postdoctoral fellows
 
 We are looking for enthusiastic technicians, graduate students and postdocs to join us. Please email Suja Jagannathan (sujatha.jagannathan@ucdenver.edu) for more information. 
 
-![Hiring!](https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwjU8q2TqYzXAhVC6GMKHeFGBwkQjRwIBw&url=https%3A%2F%2Fwww.flickr.com%2Fphotos%2F124247024%40N07%2F14066870836&psig=AOvVaw3GImXcsxRv6dYX7OixG9-V&ust=1509039684106444)
+#![Hiring!](<link>)
